tests/errors/array/out_borrow_via_dynamic_index_of_init_array_errors.err.expected
error: at 8:13: [INIT-BorrowDynamicIndexNonUniform] In function 'f', block 'entry': cannot create &out of 'a[?]': dynamic index requires the containing array to be uniformly uninitialized, but it is initialized
   |
 8 |             r = &out a[copy i];
   |             ^^^^^^^^^^^^^^^^^^
